--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="about.html" class="active">About Us</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#footer">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -117,14 +117,14 @@
         <p>Stay connected with us on our social media platforms to discover our latest products, special deals, and exciting updates. Follow us on Instagram and TikTok, like our pages, and turn on notifications to receive new updates and videos instantly.</p>
     </section>
     
-    <footer id="contact">
+    <footer id="footer">
         <p>&copy; 2025 Talex Suppliers Limited. All rights reserved.</p>
         <div class="social-links">
             <a href="https://www.instagram.com/talex_suppliersltd/" target="_blank" style="color: rgb(255, 119, 0);">Instagram</a> |
             <a href="https://www.tiktok.com/@talexcaraccessories" target="_blank" style="color: rgb(255, 119, 0);">TikTok</a> |
-            <a href="tel:+0722690154" style="color: rgb(255, 119, 0);">0722690154</a> |
-            <a href="tel:+0705317188" style="color: rgb(255, 119, 0);">0705317188</a> |
-            <a href="tel:+0702840082" style="color: rgb(255, 119, 0);">0702840082</a>
+            <a href="tel:+254722690154" style="color: rgb(255, 119, 0);">0722 690 154</a> |
+            <a href="tel:+254705317188" style="color: rgb(255, 119, 0);">0705 317 188</a> |
+            <a href="tel:+254702840082" style="color: rgb(255, 119, 0);">0702 840 082</a>
         </div>
         <p>Email: info@talexsuppliers.com | Location: Kirinyaga Business Center, Shop No. 5, Nairobi | P.O.Box 522-00300</p>
     </footer>
