--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
             <ul class="nav-links">
                 <li><a href="#" class="active" onclick="closeMenu()">Home</a></li>
-                <li><a href="../products/products.html" onclick="closeMenu()">Products</a></li>
+                <li><a href="./products.html" onclick="closeMenu()">Products</a></li>
                 <li><a href="./about.html" onclick="closeMenu()">About Us</a></li>
                 <li><a href="#contact" onclick="closeMenu()">Contact</a></li>
             </ul>
@@ -32,7 +32,7 @@
                 <div class="hero-overlay">
                     <h1>Welcome to Talex Suppliers Limited</h1>
                     <p>Your one-stop shop for premium car accessories <br>and powerline construction tools</p>
-                    <a href="../products/products.html" class="btn">Shop Now</a>
+                    <a href="./products.html" class="btn">Shop Now</a>
                 </div>
             </div>
             <button class="next">&#10095;</button>
