--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="../image/talex.png">
+    <link rel="icon" type="image/png" href="image/talex.png">
     <title>Talex Suppliers Limited</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="../image/talex.png" alt="Talex Logo" class="logo-img">
+                <img src="image/talex.png" alt="Talex Logo" class="logo-img">
                 TALEX SUPPLIERS LIMITED
             </div>
             <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div>
@@ -51,12 +51,12 @@
         <p>Email: P.O.Box 522-00300 Nairobi | Location: Kirinyaga Business Center, Shop No. 5</p>
     </footer>
 
-    <script src="../js/index.js"></script>
+    <script src="js/index.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const images = [
-                "../image/home1.jpg",
-                "../image/home2.jpg"
+                "image/home1.jpg",
+                "image/home2.jpg"
             ];
             let currentImageIndex = 0;
 
