--- a/about.html
+++ b/about.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Talex Suppliers Limited</title>
-    <link rel="icon" type="image/png" href="../image/talex.png">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="image/png" href="image/talex.png">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         body {
             text-align: center;
             font-family: Arial, sans-serif;
-            background-image: url('../image/about.png');
+            background-image: url('image/about.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -88,7 +88,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="../image/talex.png" alt="Talex Logo" class="logo-img"> TALEX SUPPLIERS LIMITED</div>
+            <div class="logo"><img src="image/talex.png" alt="Talex Logo" class="logo-img"> TALEX SUPPLIERS LIMITED</div>
             <span class="menu-toggle" onclick="toggleMenu()">&#9776;</span>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
@@ -134,6 +134,6 @@
             document.querySelector(".nav-links").classList.toggle("active");
         }
     </script>
-    <script src="../js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
