--- a/products.html
+++ b/products.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products - Talex Suppliers Limited</title>
-    <link rel="icon" type="image/png" href="../image/talex.png">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="image/png" href="image/talex.png">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         body {
             text-align: center;
@@ -49,7 +49,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="../image/talex.png" alt="Talex Logo" class="logo-img"> TALEX SUPPLIERS LIMITED</div>
+            <div class="logo"><img src="image/talex.png" alt="Talex Logo" class="logo-img"> TALEX SUPPLIERS LIMITED</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html" class="active">Products</a></li>
